--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,9 +8,16 @@ services:
       - "5000:8080" 
     environment:
       - ASPNETCORE_ENVIRONMENT=Development 
-      - MONGODB_CONNECTION_STRING=mongodb://mongo:27017
-      - MONGODB_DATABASE_NAME=sensor_data_db
-      - MONGODB_COLLECTION_NAME=sensor_readings
+      - MONGODB_HOST=${MONGODB_HOST}
+      - MONGODB_PORT=${MONGODB_PORT}
+      - MONGODB_USERNAME=${MONGODB_USERNAME}
+      - MONGODB_PASSWORD=${MONGODB_PASSWORD}
+      - MONGODB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_COLLECTION=${MONGODB_COLLECTION}
+      - MQTT_HOST=${MQTT_HOST}
+      - MQTT_PORT=${MQTT_PORT}
+      - MQTT_USERNAME=${MQTT_USERNAME}
+      - MQTT_PASSWORD=${MQTT_PASSWORD}
     depends_on:
       - mongo
       - seq
@@ -19,6 +26,9 @@ services:
     image: mongo:latest 
     ports:
       - "27017:27017"  
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGODB_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
     volumes:
       - mongo_data:/data/db 
 
