Authentication/Authorization and get all sensor data functionality

--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       - MONGODB_PORT=${MONGODB_PORT}
       - MONGODB_USERNAME=${MONGODB_USERNAME}
       - MONGODB_PASSWORD=${MONGODB_PASSWORD}
-      - MONGODB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_SENSOR_DATABASE=${MONGODB_SENSOR_DATABASE}
+      - MONGODB_USER_DATABASE=${MONGODB_USER_DATABASE}
       - MONGODB_COLLECTION=${MONGODB_COLLECTION}
       - MQTT_HOST=${MQTT_HOST}
       - MQTT_PORT=${MQTT_PORT}
