adjust .env example

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,13 +1,21 @@
 # MQTT Settings
-MQTT_HOST=
+MQTT_HOST=localhost
 MQTT_PORT=8883
-MQTT_USERNAME=
-MQTT_PASSWORD=
+MQTT_USERNAME=admin
+MQTT_PASSWORD=password
 
 # MongoDB Settings
 MONGODB_HOST=mongo
 MONGODB_PORT=27017
-MONGODB_USERNAME=
-MONGODB_PASSWORD=
-MONGODB_DATABASE=sensor_data_db
-MONGODB_COLLECTION=sensor_readings 
+MONGODB_USERNAME=admin
+MONGODB_PASSWORD=password
+MONGODB_SENSOR_DATABASE=sensor_data_db
+MONGODB_USER_DATABASE=user_data_db
+MONGODB_COLLECTION=sensor_readings
+
+# JWT Settings
+JWT_SECRET_KEY=your-super-secret-key-with-at-least-32-characters
+JWT_ISSUER=plantastic
+JWT_AUDIENCE=plantastic-api
+JWT_ACCESS_TOKEN_EXPIRATION_MINUTES=15
+JWT_REFRESH_TOKEN_EXPIRATION_DAYS=7
