Added email notifications using gemini api

--- a/api/.env.example
+++ b/api/.env.example
@@ -19,3 +19,13 @@ JWT_ISSUER=plantastic
 JWT_AUDIENCE=plantastic-api
 JWT_ACCESS_TOKEN_EXPIRATION_MINUTES=15
 JWT_REFRESH_TOKEN_EXPIRATION_DAYS=7
+
+# Gemini Settings
+GEMINI_API_KEY=gemini-api-key
+GEMINI_MODEL=gemini-2.0-flash-exp
+
+# Gmail Settings
+EMAIL_USERNAME=your-gmail-address@gmail.com
+EMAIL_APP_PASSWORD=gmail-app-password
+EMAIL_SMTP_HOST=smtp.gmail.com  
+EMAIL_SMTP_PORT=587 
