--- a/api/.env.example
+++ b/api/.env.example
@@ -24,6 +24,9 @@ JWT_REFRESH_TOKEN_EXPIRATION_DAYS=7
 GEMINI_API_KEY=gemini-api-key
 GEMINI_MODEL=gemini-2.0-flash-exp
 
+#Open router
+OPENROUTER_API_KEY=
+
 # Gmail Settings
 EMAIL_USERNAME=your-gmail-address@gmail.com
 EMAIL_APP_PASSWORD=gmail-app-password
