--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - MQTT_PASSWORD=${MQTT_PASSWORD}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - GEMINI_MODEL=${GEMINI_MODEL:-gemini-2.0-flash-exp}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - EMAIL_USERNAME=${EMAIL_USERNAME}
       - EMAIL_APP_PASSWORD=${EMAIL_APP_PASSWORD}
       - EMAIL_SMTP_HOST=${EMAIL_SMTP_HOST:-smtp.gmail.com}
